Преддипломная практика (можно почти всё rollback-ать, кроме гит-модуля, печаталки исходников и там по мелочи)

--- a/Dissertation/conclusion.tex
+++ b/Dissertation/conclusion.tex
@@ -1,4 +1,4 @@
-\chapter*{Заключение}                       % Заголовок
+\chapter*{\centerline{Заключение}}                       % Заголовок
 \addcontentsline{toc}{chapter}{Заключение}  % Добавляем его в оглавление
 
 %% Согласно ГОСТ Р 7.0.11-2011:
@@ -6,16 +6,20 @@
 %% 9.2.3 В заключении автореферата диссертации излагают итоги данного исследования, рекомендации и перспективы дальнейшей разработки темы.
 %% Поэтому имеет смысл сделать эту часть общей и загрузить из одного файла в автореферат и в диссертацию:
 
-Основные результаты работы заключаются в следующем.
-\input{common/concl}
-И какая-нибудь заключающая фраза.
+В результате самостоятельной работы студента в семестре и преддипломной практики были решены следующие задачи:
 
-Последний параграф может включать благодарности.  В заключение автор
-выражает благодарность и большую признательность научному руководителю
-Иванову~И.\,И. за поддержку, помощь, обсуждение результатов и~научное
-руководство. Также автор благодарит Сидорова~А.\,А. и~Петрова~Б.\,Б.
-за помощь в~работе с~образцами, Рабиновича~В.\,В. за предоставленные
-образцы и~обсуждение результатов, Занудятину~Г.\,Г. и авторов шаблона
-*Russian-Phd-LaTeX-Dissertation-Template* за~помощь в оформлении
-диссертации. Автор также благодарит много разных людей
-и~всех, кто сделал настоящую работу автора возможной.
+\begin{enumerate}
+    \item Рассмотрены технологии, алгоритмы, методы предметной области, формализованы в отдельной главе пояснительной записки выпускной квалификационной работы.
+    \item Разработан проект визуального языка программирования, поддерживающего функциональную парадигму.
+    \item Построена клиент-серверная архитектура среды разработки на спроектированном языке с поддержкой компиляции программы в целевой код на языке JavaScript.
+    \item Спроектирован интерфейс интегрированной среды программирования, разработан функциональный прототип среды с использованием технологии HTML5.
+    \item Формализованы методы оптимизации рекурсии в программах на спроектированном языке программирования.
+\end{enumerate}
+
+В ближайшее время планируется:
+
+\begin{enumerate}
+    \item Интегрировать среду программирования и компилятор в единую программную систему.
+    \item Провести полномасштабное тестирование функционального прототипа системы.
+    \item Зафиксировать соответствующую информацию в пояснительной записке к выпускной квалификационной работе студента.
+\end{enumerate}
