--- a/Dissertation/part2.tex
+++ b/Dissertation/part2.tex
@@ -1,386 +1,320 @@
 \chapter{Проектирование программного обеспечения}\label{ch:ch2}
 
-\section{Одиночное изображение}\label{sec:ch2/sec1}
+\section{Проектирование визуального языка программирования}\label{sec:ch2/sec1}
+
+Языку дано название \textbf{Flovver}. Flovver --- аппликативный язык, то есть, вычислительный процесс в нем основывается на вычислении 
+результата функции от заданного числа аргументов и передачи этого значения в другие функции.
+
+На уровне семантики в языке существует всего-лишь один тип объектов --- функция.
+
+Функция переводит от 1 до N значений заданных входящих типов в одно значение выходящего типа.
+
+В Flovver функции представлены диаграммами вида, представленного на рисунке \ref{fig:functions}.
 
 \begin{figure}[ht]
-    \centerfloat{
-        \includegraphics[scale=0.27]{latex}
-    }
-    \caption{TeX.}\label{fig:latex}
+	\centering
+	\includegraphics [scale=1.0] {functions}
+	\caption{Представление функции в Flovver}
+	\label{fig:functions}
 \end{figure}
+\FloatBarrier
 
-Для выравнивания изображения по-центру используется команда \verb+\centerfloat+, которая является во
-многом улучшенной версией встроенной команды \verb+\centering+.
+Здесь блок $f$ --- некоторая функция типа $input 1$ $\rightarrow$ ... $\rightarrow$ $input n$ $\rightarrow$ $output$. 
+Левая часть блока --- входы функции, правая часть блока --- выход функции.
 
-\section{Длинное название параграфа, в котором мы узнаём как сделать две картинки с~общим номером и названием}\label{sec:ch2/sect2}
+Из правой части выходит дуга, которую можно соединить с входом другой функции (рисунок \ref{fig:functions_composition}).
 
-А это две картинки под общим номером и названием:
 \begin{figure}[ht]
-    \begin{minipage}[b][][b]{0.49\linewidth}\centering
-        \includegraphics[width=0.5\linewidth]{knuth1} \\ а)
-    \end{minipage}
-    \hfill
-    \begin{minipage}[b][][b]{0.49\linewidth}\centering
-        \includegraphics[width=0.5\linewidth]{knuth2} \\ б)
-    \end{minipage}
-    \caption{Очень длинная подпись к изображению,
-        на котором представлены две фотографии Дональда Кнута}
-    \label{fig:knuth}
+	\centering
+	\includegraphics [scale=0.7] {functions_composition}
+	\caption{Композиция функций в Flovver}
+	\label{fig:functions_composition}
 \end{figure}
+\FloatBarrier
 
-Те~же~две картинки под~общим номером и~названием,
-но с автоматизированной нумерацией подрисунков:
+Если на вход переданы не все аргументы, считается, что функция недоопределена, и выходную дугу создать нельзя.
+
+Функцию и переданные аргументы можно частично применить, проведя дугу из нижней стороны блока к месту использования (рисунок \ref{fig:thunks}).
+
 \begin{figure}[ht]
-    \centerfloat{
-        \hfill
-        \subcaptionbox[List-of-Figures entry]{Первый подрисунок\label{fig:knuth_2-1}}{%
-            \includegraphics[width=0.25\linewidth]{knuth1}}
-        \hfill
-        \subcaptionbox{\label{fig:knuth_2-2}}{%
-            \includegraphics[width=0.25\linewidth]{knuth2}}
-        \hfill
-        \subcaptionbox{Третий подрисунок, подпись к которому
-            не~помещается на~одной строке}{%
-            \includegraphics[width=0.3\linewidth]{example-image-c}}
-        \hfill
-    }
-    \legend{Подрисуночный текст, описывающий обозначения, например. Согласно
-        ГОСТ 2.105, пункт 4.3.1, располагается перед наименованием рисунка.}
-    \caption[Этот текст попадает в названия рисунков в списке рисунков]{Очень
-        длинная подпись к второму изображению, на~котором представлены две
-        фотографии Дональда Кнута}\label{fig:knuth_2}
+	\centering
+	\includegraphics [scale=1.0] {thunks}
+	\caption{Синтаксис частичного применения функции}
+	\label{fig:thunks}
 \end{figure}
+\FloatBarrier
 
-На рисунке~\cref{fig:knuth_2-1} показан Дональд Кнут без головного убора.
-На рисунке~\cref{fig:knuth_2}\subcaptionref*{fig:knuth_2-2}
-показан Дональд Кнут в головном уборе.
+В результате получим из данной функцию от (нестрого) меньшего числа аргументов, ранее переданные аргументы будут зафиксированы (рисунок \ref{fig:thunks_example}).
 
-Возможно вставлять векторные картинки, рассчитываемые \LaTeX\ <<на~лету>>
-с~их~предварительной компиляцией. Надписи в таких рисунках будут выполнены
-тем же~шрифтом, который указан для документа в целом.
-На~рисунке~\cref{fig:tikz_example} на~странице~\pageref{fig:tikz_example}
-представлен пример схемы, рассчитываемой пакетом \verb|tikz| <<на~лету>>.
-Для ускорения компиляции, подобные рисунки могут быть <<кешированы>>, что
-определяется настройками в~\verb|common/setup.tex|.
-Причём имя предкомпилированного
-файла и~папка расположения таких файлов могут быть отдельно заданы,
-что удобно, если не~для подготовки диссертации,
-то~для подготовки научных публикаций.
 \begin{figure}[ht]
-    \centerfloat{
-        \ifdefmacro{\tikzsetnextfilename}{\tikzsetnextfilename{tikz_example_compiled}}{}% присваиваемое предкомпилированному pdf имя файла (не обязательно)
-        \input{Dissertation/images/tikz_scheme.tikz}
-
-    }
-    \legend{}
-    \caption[Пример \texttt{tikz} схемы]{Пример рисунка, рассчитываемого
-        \texttt{tikz}, который может быть предкомпилирован}\label{fig:tikz_example}
+	\centering
+	\includegraphics [scale=0.6] {thunks_example}
+	\caption{Пример частичного применения функции}
+	\label{fig:thunks_example}
 \end{figure}
+\FloatBarrier
 
-Множество программ имеют либо встроенную возможность экспортировать векторную
-графику кодом \verb|tikz|, либо соответствующий пакет расширения.
-Например, в GeoGebra есть встроенный экспорт,
-для Inkscape есть пакет svg2tikz,
-для Python есть пакет tikzplotlib,
-для R есть пакет tikzdevice.
+Чтобы вычислить функцию, передаваемую как значение, можно использовать специальную функцию $apply$ (рисунок \ref{fig:apply_thunk}).
 
-\section{Пример вёрстки списков}\label{sec:ch2/sec3}
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.8] {apply_thunk}
+	\caption{Пример использования специальной функции apply}
+	\label{fig:apply_thunk}
+\end{figure}
+\FloatBarrier
 
-\noindent Нумерованный список:
+Функция $apply$ принимает первым параметром функцию от N аргументов, следующие 2 ... N+1 параметров - параметры, подставляемые в первую функцию (рисунок \ref{fig:apply}).
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=1.0] {apply}
+	\caption{Синтаксис функции apply}
+	\label{fig:apply}
+\end{figure}
+\FloatBarrier
+
+Построение новых функций из заданных представлено на рисунке \ref{fig:function_body}.
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.9] {function_body}
+	\caption{Построение новой функции}
+	\label{fig:function_body}
+\end{figure}
+\FloatBarrier
+
+Здесь блок f --- тело функции, левая сторона блока --- входы функции, правая сторона блока --- выход функции; внутри блока находится функция $g$, к которой применяются входы $f$, результат $g$ передается на выход $f$.
+
+Для поддержки создания рекурсивных функций внутри тела функции возможно создание специального блока $self$, который является ссылкой на объявляемую функцию (рисунок \ref{fig:function_body_self}).
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.9] {function_body_self}
+	\caption{Определение рекурсивной функции}
+	\label{fig:function_body_self}
+\end{figure}
+\FloatBarrier
+
+Можно считать, что функции с $self$ применены к комбинатору неподвижной точки. Комбинатором неподвижной точки (также Y-комбинатором) называют специальную функцию высшего порядка, которая вычисляет неподвижную точку другой функции. 
+Практическая ценность такой функции - возможность использовать рекурсию для анонимных функций без необходимости определения им имени.
+
+\FloatBarrier
+
+%\section{Проектирование общей архитектуры приложения}\label{sec:ch2/sec2}
+
+\section{Проектирование вариантов использования приложения}\label{sec:ch2/sec3}
+
+Были написаны возможные сценарии действий пользователей.
+
 \begin{enumerate}
-    \item Первый пункт.
-    \item Второй пункт.
-    \item Третий пункт.
+    \item Тим-лид Иван побывал на стоячей встрече, откуда узнал, что его команда будет разрабатывать приложение “Список задач”. Иван хочет сделать прототип, чтобы объяснить задачу остальным членам команды.
+
+    Он создает новый проект в приложении Flovver, описывает модель данных: текстовый список задач (нужно где-то хранить задачи). 
+
+    Далее Иван начинает делать макет - добавляет поле для ввода, кнопку и текстовый список.
+
+    Иван сразу настроил макет, чтобы текст для списка брался из списка в модели данных.
+
+    Теперь он хочет, чтобы при нажатии на кнопку текст из формы добавлялся в список. Он рисует простую программу на Flovver, которая это и делает.
+
+    Иван включает прототип, смотрит, что все работает как надо, собирает программу и идет показывать другим членам команды.
+
+    \item У программиста Олега ответственная задача - ему надо добавить функцию “Удаление элементов” из списка в приложение “Список задач”. Олег открывает проект в Flovver и видит, что ему надо поменять только макет приложения и логику программы. В макете Олег добавляет элементам списка кнопку “Удалить” и идет менять логику программы. Олег добавляет функцию удаления в программу, запускает прототип, проверяет, что все работает и идет на ревью, показывать другим членам команды.
+
+    \item Дизайнеру Афанасию поручили подобрать цвет кнопки “Добавить задачу” вместе с заказчиком Михаилом. Афанасий открыл проект в Flovver и по желанию Михаила меняет цвет кнопки. Через пятнадцать минут Михаил определился с цветом кнопки и попросил выделить текст в кнопке курсивом, что Афанасий и сделал. Афанасий показал рабочий прототип Михаилу, Михаил пожал Афанасию руку и пошел выписывать чек в отдел работы с клиентами.
+
+    \item Аналитик Игорь решил, что в приложении “Список задач” кроме задачи нужно указывать также ориентировочную дату выполнения. Он открыл проект “Список задач” в Flovver, заменил модель данных “Текстовый список задач” на модель “Список кортежей (Дата, Текст задачи)”. Игорь попытался запустить прототип, но Flovver отказался запускать его, сообщив “В программе не соответствуют типы данных - ожидался Текстовый список задач, получили Список кортежей (Дата, Текст задачи)”. К счастью, Игорь не запаниковал, отменил внесенные изменения и позвал программиста Олега. Олег выслушал Игоря, изменил модель и программу. В программе появилась новая функция, а Игорь в итоге ничего не сломал.
 \end{enumerate}
 
-\noindent Маркированный список:
-\begin{itemize}
-    \item Первый пункт.
-    \item Второй пункт.
-    \item Третий пункт.
-\end{itemize}
+\section{Проектирование интерфейса приложения}\label{sec:ch2/sec4}
 
-\noindent Вложенные списки:
-\begin{itemize}
-    \item Имеется маркированный список.
-          \begin{enumerate}
-              \item В нём лежит нумерованный список,
-              \item в котором
-                    \begin{itemize}
-                        \item лежит ещё один маркированный список.
-                    \end{itemize}
-          \end{enumerate}
-\end{itemize}
+\subsection{Проектирование меню и функционально-модульной структуры}\label{sec:ch2/sec4/subsec1}
 
-\noindent Нумерованные вложенные списки:
-\begin{enumerate}
-    \item Первый пункт.
-    \item Второй пункт.
-    \item Вообще, по ГОСТ 2.105 первый уровень нумерации
-          (при необходимости ссылки в тексте документа на одно из перечислений)
-          идёт буквами русского или латинского алфавитов,
-          а второй "--- цифрами со~скобками.
-          Здесь отходим от ГОСТ.
-          \begin{enumerate}
-              \item в нём лежит нумерованный список,
-              \item в котором
-                    \begin{enumerate}
-                        \item ещё один нумерованный список,
-                        \item третий уровень нумерации не нормирован ГОСТ 2.105;
-                        \item обращаем внимание на строчность букв,
-                        \item в этом списке
-                              \begin{itemize}
-                                  \item лежит ещё один маркированный список.
-                              \end{itemize}
-                    \end{enumerate}
+При открытии программы должен появиться список настроек проекта. В верхней части рабочей области находится навигационное меню с возможностью перехода в модули «Модель», «Обновление», «Представление», «Настройки». Также на верхней панели находятся кнопки «Собрать» и «Запустить», при нажатии на которых происходит сборка проекта, запуск сборки проекта в отдельном окне соответственно.
 
-          \end{enumerate}
+В модуле «Настройки» содержится форма для управления флагами проекта – «Устранение хвостовой рекурсии»,  «Устранение рекурсии Фибоначчи», «Устранение общей рекурсии», которые представлены элементами управления типа «Флаг» (англ. – check-box). Запись флагов в системное хранилище осуществляется при нажатии на кнопку «Сохранить» в нижней части формы.
 
-    \item Четвёртый пункт.
-\end{enumerate}
+В модулях «Модель», «Представление», «Обновление» содержится рабочая область, представляющая пустое пространство, на котором можно размещать элементы предметной области модуля используя механизм «потяни-и-отпусти» (англ. – drag-and-drop). Поверх рабочего окна в модулях находятся две боковые панели – слева – панель с сущностями предметной области модуля, которые можно выбирать наведением и нажатием курсора, добавлять в рабочую область перемещением курсора с зажатой левой кнопкой мыши. Панели можно сворачивать, нажимая на кнопку с соответствующим символом (иконки типа «Шеврон налево», «Шеврон направо»). В правой части содержится панель свойств текущего объекта. При нажатии левой кнопкой мыши на объект рабочей области, для него отображается соответствующий набор свойств – имя объекта, его позиция и т.д. Значения свойств изменяются с использованием соответствующих элементов управления – форм ввода, кнопок. При изменении объекта в рабочей области меняются значения его свойств на панели «Свойства» и наоборот. Компоненты, соответствующие функциональным блокам, представлены в следующем параграфе.
 
-\section{Традиции русского набора}
+Объекты модуля «Модель» можно назначить моделью проекта. На панели «Свойства» содержится раздел «Роли» с кнопкой «Назначить моделью». При нажатии на нее, выделеный объект помечается как модель. В рабочем пространстве модель визуально представлена объектом с голубым фоном. Объекты типа «Вариант» можно также назначить типом сообщений проекта. При фокусе на варианте в раздел «Роли» добавляется новая кнопка «Назначить типом сообщений». Тип-сообщение выделяется в рабочем пространстве зеленой обводкой объекта.
 
-Много полезных советов приведено в материале
-<<\href{https://kostyrka.ru/main/ru/typesetting-and-typography-crash-course-by-kostyrka/}{Краткий курс благородного набора}>>
-(автор А.\:В.~Костырка).
-Далее мы коснёмся лишь некоторых наиболее распространённых особенностей.
+\subsection{Прототипирование отдельных блоков и компонентов}\label{sec:ch2/sec4/subsec2}
 
-\subsection{Пробелы}
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.3] {settings_screen}
+	\caption{Экран модуля <<Настройки>>, являющийся стартовым}
+	\label{fig:settings_screen}
+\end{figure}
 
-В~русском наборе принято:
-\begin{itemize}
-    \item единицы измерения, знак процента отделять пробелами от~числа:
-          10~кВт, 15~\% (согласно ГОСТ 8.417, раздел 8);
-    \item \(\tg 20\text{\textdegree}\), но: 20~{\textdegree}C
-          (согласно ГОСТ 8.417, раздел 8);
-    \item знак номера, параграфа отделять от~числа: №~5, \S~8;
-    \item стандартные сокращения: т.\:е., и~т.\:д., и~т.\:п.;
-    \item неразрывные пробелы в~предложениях.
-\end{itemize}
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.3] {model_screen}
+	\caption{Экран модуля <<Модель>>}
+	\label{fig:model_screen}
+\end{figure}
 
-\subsection{Математические знаки и символы}
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.3] {view_screen}
+	\caption{Экран модуля <<Представление>>}
+	\label{fig:view_screen}
+\end{figure}
 
-Русская традиция начертания греческих букв и некоторых математических
-функций отличается от~западной. Это исправляется серией
-\verb|\renewcommand|.
-\begin{itemize}
-    %Все \original... команды заранее, ради этого примера, определены в Dissertation\userstyles.tex
-    \item[До:] \( \originalepsilon \originalge \originalphi\),
-          \(\originalphi \originalleq \originalepsilon\),
-          \(\originalkappa \in \originalemptyset\),
-          \(\originaltan\),
-          \(\originalcot\),
-          \(\originalcsc\).
-    \item[После:] \( \epsilon \ge \phi\),
-          \(\phi \leq \epsilon\),
-          \(\kappa \in \emptyset\),
-          \(\tan\),
-          \(\cot\),
-          \(\csc\).
-\end{itemize}
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.3] {update_screen}
+	\caption{Экран модуля <<Обновление>>}
+	\label{fig:update_screen}
+\end{figure}
 
-Кроме того, принято набирать греческие буквы вертикальными, что
-решается подключением пакета \verb|upgreek| (см. закомментированный
-блок в~\verb|userpackages.tex|) и~аналогичным переопределением в
-преамбуле (см.~закомментированный блок в~\verb|userstyles.tex|). В
-этом шаблоне такие переопределения уже включены.
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.7] {dropdown}
+	\caption{Компонент <<Выпадающее окно>>, появляющийся при нажатии на кнопку <<Проект>> на навигационной панели}
+	\label{fig:dropdown}
+\end{figure}
 
-Знаки математических операций принято переносить. Пример переноса
-в~формуле~\eqref{eq:equation3}.
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.7] {widgets_panel}
+	\caption{Левая боковая панель <<Виджеты>> модуля <<Представление>>}
+	\label{fig:widgets_panel}
+\end{figure}
 
-\subsection{Кавычки}
-В английском языке приняты одинарные и двойные кавычки в~виде ‘...’ и~“...”.
-В~России приняты французские («...») и~немецкие („...“) кавычки (они называются
-«ёлочки» и~«лапки», соответственно). ,,Лапки`` обычно используются внутри
-<<ёлочек>>, например, <<... наш гордый ,,Варяг``...>>.
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.3] {view_work}
+	\caption{Рабочая область модуля <<Представление>>}
+	\label{fig:view_work}
+\end{figure}
 
-Французкие левые и правые кавычки набираются
-как лигатуры \verb|<<| и~\verb|>>|, а~немецкие левые
-и правые кавычки набираются как лигатуры \verb|,,| и~\verb|‘‘| (\verb|``|).
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.7] {view_properties}
+	\caption{Правая боковая панель <<Свойства>> модуля <<Представление>>}
+	\label{fig:view_properties}
+\end{figure}
 
-Вместо лигатур или команд с~активным символом "\ можно использовать команды
-\verb|\glqq| и \verb|\grqq| для набора немецких кавычек и команды \verb|\flqq|
-и~\verb|\frqq| для набора французских кавычек. Они определены в пакете
-\verb|babel|.
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.7] {model_types}
+	\caption{Левая боковая панель <<Типы>> модуля <<Модель>>}
+	\label{fig:model_types}
+\end{figure}
 
-\subsection{Тире}
-%  babel+pdflatex по умолчанию, в polyglossia надо включать опцией (и перекомпилировать с удалением временных файлов)
-Команда \verb|"---| используется для печати тире в тексте. Оно может быть
-несколько короче английского длинного тире (подробности в~документации
-русификации babel). Кроме того, команда задаёт небольшую жёсткую отбивку
-от~слова, стоящего перед тире. При этом, само тире не~отрывается от~слова.
-После тире следует такая же отбивка от текста, как и~перед тире. При наборе
-текста между словом и командой, за которым она следует, должен стоять пробел.
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.7] {model_model}
+	\caption{Компонент <<Псевдоним примитивного типа>> модуля <<Модель>> в состоянии <<Назначен моделью>>}
+	\label{fig:model_model}
+\end{figure}
 
-В составных словах, таких, как <<Закон Менделеева"--~Клапейрона>>, для печати
-тире надо использовать команду \verb|"--~|. Она ставит более короткое,
-по~сравнению с~английским, тире и позволяет делать переносы во втором слове.
-При~наборе текста команда \verb|"--~| не отделяется пробелом от слова,
-за~которым она следует (\verb|Менделеева"--~|). Следующее за командой слово
-может быть  отделено от~неё пробелом или перенесено на другую строку.
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.7] {model_primitive}
+	\caption{Компонент <<Псевдоним примитивного типа>> модуля <<Модель>> в начальном состоянии}
+	\label{fig:model_primitive}
+\end{figure}
 
-Если прямая речь начинается с~абзаца, то перед началом её печатается тире
-командой \verb|"--*|. Она печатает русское тире и жёсткую отбивку нужной
-величины перед текстом.
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.7] {message_variant}
+	\caption{Компонент <<Тип-вариант>> модуля <<Модель>> в состоянии <<Назначен типом сообщений>>}
+	\label{fig:message_variant}
+\end{figure}
 
-\subsection{Дефисы и переносы слов}
-%  babel+pdflatex по умолчанию, в polyglossia надо включать опцией (и перекомпилировать с удалением временных файлов)
-Для печати дефиса в~составных словах введены две команды. Команда~\verb|"~|
-печатает дефис и~запрещает делать переносы в~самих словах, а~команда \verb|"=|
-печатает дефис, оставляя \TeX ’у право делать переносы в~самих словах.
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.7] {model_variant}
+	\caption{Компонент <<Тип-вариант>> в состоянии <<Назначен моделью>>}
+	\label{fig:model_variant}
+\end{figure}
 
-В отличие от команды \verb|\-|, команда \verb|"-| задаёт место в~слове, где
-можно делать перенос, не~запрещая переносы и~в~других местах слова.
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.7] {message_model_variant}
+	\caption{Компонент <<Тип-вариант>> в состоянии <<Назначен моделью и типом сообщений>>}
+	\label{fig:message_model_variant}
+\end{figure}
 
-Команда \verb|""| задаёт место в~слове, где можно делать перенос, причём дефис
-при~переносе в~этом месте не~ставится.
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.5] {model_properties}
+	\caption{Правая боковая панель <<Свойства>> модуля <<Модель>>, выбран компонент <<Вариант>>}
+	\label{fig:model_properties}
+\end{figure}
 
-Команда \verb|",| вставляет небольшой пробел после инициалов с~правом переноса
-в~фамилии.
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.7] {update_call}
+	\caption{Компонент <<Вызов функции>> модуля <<Обновление>>}
+	\label{fig:update_call}
+\end{figure}
 
-\section{Текст из панграмм и формул}
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.7] {update_case}
+	\caption{Компонент <<Выбор варианта>> модуля <<Обновление>>}
+	\label{fig:update_case}
+\end{figure}
 
-Любя, съешь щипцы, "--- вздохнёт мэр, "--- кайф жгуч. Шеф взъярён тчк щипцы
-с~эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц в~шкаф. Экс-граф?
-Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен шляп (юфть) "---
-вдрызг! Любя, съешь щипцы, "--- вздохнёт мэр, "--- кайф жгуч. Шеф взъярён тчк
-щипцы с~эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц в~шкаф.
-Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен шляп
-(юфть) "--- вдрызг! Любя, съешь щипцы, "--- вздохнёт мэр, "--- кайф жгуч. Шеф
-взъярён тчк щипцы с~эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц
-в~шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен
-шляп (юфть) "--- вдрызг! Любя, съешь щипцы, "--- вздохнёт мэр, "--- кайф жгуч.
-Шеф взъярён тчк щипцы с~эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц
-в~шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен
-шляп (юфть) "--- вдрызг! Любя, съешь щипцы, "--- вздохнёт мэр, "--- кайф жгуч.
-Шеф взъярён тчк щипцы с~эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц
-в~шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен
-шляп (юфть) "--- вдрызг! Любя, съешь щипцы, "--- вздохнёт мэр, "--- кайф жгуч.
-Шеф взъярён тчк щипцы с~эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц
-в~шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен
-шляп (юфть) "--- вдрызг! Любя, съешь щипцы, "--- вздохнёт мэр, "--- кайф жгуч.
-Шеф взъярён тчк щипцы с~эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц
-в~шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен
-шляп (юфть) "--- вдрызг! Любя, съешь щипцы, "--- вздохнёт мэр, "--- кайф жгуч.
-Шеф взъярён тчк щипцы с~эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц
-в~шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен
-шляп (юфть) "--- вдрызг! Любя, съешь щипцы, "--- вздохнёт мэр, "--- кайф жгуч.
-Шеф взъярён тчк щипцы с~эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц
-в~шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен
-шляп (юфть) "--- вдрызг! Любя, съешь щипцы, "--- вздохнёт мэр, "--- кайф жгуч.
-Шеф взъярён тчк щипцы с~эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц
-в~шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен
-шляп (юфть) "--- вдрызг! Любя, съешь щипцы, "--- вздохнёт мэр, "--- кайф жгуч.
-Шеф взъярён тчк щипцы с~эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц
-в~шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен
-шляп (юфть) "--- вдрызг!Любя, съешь щипцы, "--- вздохнёт мэр, "--- кайф жгуч.
-Шеф взъярён тчк щипцы с~эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц
-в~шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.7] {update_input}
+	\caption{Компонент <<Точка входа>> модуля <<Обновление>>}
+	\label{fig:update_input}
+\end{figure}
 
-Ку кхоро адолэжкэнс волуптариа хаж, вим граэко ыкчпэтында ты. Граэкы жэмпэр
-льюкяльиюч квуй ку, аэквюы продыжщэт хаж нэ. Вим ку магна пырикульа, но квюандо
-пожйдонёюм про. Квуй ат рыквюы ёнэрмйщ. Выро аккузата вим нэ.
-\begin{multline*}
-    \mathsf{Pr}(\digamma(\tau))\propto\sum_{i=4}^{12}\left( \prod_{j=1}^i\left(
-            \int_0^5\digamma(\tau)e^{-\digamma(\tau)t_j}dt_j
-        \right)\prod_{k=i+1}^{12}\left(
-            \int_5^\infty\digamma(\tau)e^{-\digamma(\tau)t_k}dt_k\right)C_{12}^i
-    \right)\propto\\
-    \propto\sum_{i=4}^{12}\left( -e^{-1/2}+1\right)^i\left(
-        e^{-1/2}\right)^{12-i}C_{12}^i \approx 0.7605,\quad
-    \forall\tau\neq\overline{\tau}
-\end{multline*}
-Квуй ыёюз омниюм йн. Экз алёквюам кончюлату квуй, ты альяквюам ёнвидюнт пэр.
-Зыд нэ коммодо пробатуж. Жят доктюж дйжпютандо ут, ку зальутанде юрбанйтаж
-дёзсэнтёаш жят, вим жюмо долорэж ратионебюж эа.
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.7] {update_output}
+	\caption{Компонент <<Точка выхода>> модуля «Обновление»}
+	\label{fig:update_output}
+\end{figure}
 
-Ад ентэгры корпора жплэндидэ хаж. Эжт ат факэтэ дычэрунт пэржыкюти. Нэ нам
-доминг пэрчёус. Ку квюо ёужто эррэм зючкёпит. Про хабэо альбюкиюс нэ.
-\[
-    \begin{pmatrix}
-        a_{11} & a_{12} & a_{13} \\
-        a_{21} & a_{22} & a_{23}
-    \end{pmatrix}
-\]
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.5] {update_def}
+	\caption{Компонент <<Определение функции>> модуля <<Обновление>>}
+	\label{fig:update_def}
+\end{figure}
 
-\[
-    \begin{vmatrix}
-        a_{11} & a_{12} & a_{13} \\
-        a_{21} & a_{22} & a_{23}
-    \end{vmatrix}
-\]
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.5] {update_def_band}
+	\caption{Компонент <<Определение функции>> в состоянии <<Расстягивание>>}
+	\label{fig:update_def_band}
+\end{figure}
 
-\[
-    \begin{bmatrix}
-        a_{11} & a_{12} & a_{13} \\
-        a_{21} & a_{22} & a_{23}
-    \end{bmatrix}
-\]
-Про эа граэки квюаыквуэ дйжпютандо. Ыт вэл тебиквюэ дэфянятйоныс, нам жолюм
-квюандо мандамюч эа. Эож пауло лаудым инкедыринт нэ, пэрпэтюа форынчйбюж пэр
-эю. Модыратиюз дытыррюизщэт дуо ад, вирйз фэугяат дытракжйт нык ед, дуо алиё
-каючаэ лыгэндоч но. Эа мольлиз юрбанйтаж зигнёфэрумквюы эжт.
+\FloatBarrier
 
-Про мандамюч кончэтытюр ед. Трётанё прёнкипыз зигнёфэрумквюы вяш ан. Ат хёз
-эквюедым щуавятатэ. Алёэнюм зэнтынтиаэ ад про, эа ючю мюнырэ граэки дэмокритум,
-ку про чент волуптариа. Ыльит дыкоры аляквюид еюж ыт. Ку рыбюм мюндй ютенам
-дуо.
-\begin{align*}
-    2\times 2       & = 4      & 6\times 8 & = 48 \\
-    3\times 3       & = 9      & a+b       & = c  \\
-    10 \times 65464 & = 654640 & 3/2       & =1,5
-\end{align*}
+\subsection{Глоссарий}\label{sec:ch2/sec4/subsec3}
 
-\begin{equation}
-    \begin{aligned}
-        2\times 2       & = 4      & 6\times 8 & = 48 \\
-        3\times 3       & = 9      & a+b       & = c  \\
-        10 \times 65464 & = 654640 & 3/2       & =1,5
-    \end{aligned}
-\end{equation}
+\textbf{Приложение} --– комбинация компьютерных инструкций и данных, позволяющая аппаратному обеспечению вычислительной системы выполнять вычисления или функции управления.
 
-Пэр йн тальэ пожтэа, мыа ед попюльо дэбетиз жкрибэнтур. Йн квуй аппэтырэ
-мэнандря, зыд аляквюид хабымуч корпора йн. Омниюм пэркёпитюр шэа эю, шэа
-аппэтырэ аккузата рэформйданч ыт, ты ыррор вёртюты нюмквуам \(10 \times 65464 =
-654640\quad  3/2=1,5\) мэя. Ипзум эуежмод \(a+b = c\) мальюизчыт ад дуо. Ад
-фэюгаят пытынтёюм адвыржаряюм вяш. Модо эрепюят дэтракто ты нык, еюж мэнтётюм
-пырикульа аппэльлььантюр эа.
+\textbf{Интегрированная среда разработки (ИСР)} –-- это программное приложение, которое предоставляет программистам комплексные возможности для разработки программного обеспечения.
 
-Мэль ты дэлььынётё такематыш. Зэнтынтиаэ конклььюжионэмквуэ ан мэя. Вёжи лебыр
-квюаыквуэ квуй нэ, дуо зймюл дэлььиката ку. Ыам ку алиё путынт.
+\textbf{Виджет} –-- примитив графического интерфейса пользователя, имеющий стандартный внешний вид и выполняющий стандартные действия.
 
-%Большая фигурная скобка только справа
-\[\left. %ВАЖНО: точка после слова left делает скобку неотображаемой
-    \begin{aligned}
-        2 \times x      & = 4 \\
-        3 \times y      & = 9 \\
-        10 \times 65464 & = z
-    \end{aligned}\right\}
-\]
+\textbf{Вкладка} –-- элемент графического интерфейса пользователя, который даёт возможность переключения в одном окне приложения между несколькими открытыми документами или предопределёнными наборами элементов интерфейса, когда их доступно несколько, а на выделенном для них пространстве окна можно показывать только один из них.
 
+\textbf{Панель} --– определенное расположение информации, сгруппированной вместе для представления пользователям в окне или всплывающем окне.
 
-Конвынёры витюпырата но нам, тебиквюэ мэнтётюм позтюлант ед про. Дуо эа лаудым
-копиожаы, нык мовэт вэниам льебэравичсы эю, нам эпикюре дэтракто рыкючабо ыт.
-Вэрйтюж аккюжамюз ты шэа, дэбетиз форынчйбюж жкряпшэрит ыт прё. Ан еюж тымпор
-рыфэррэнтур, ючю дольор котёдиэквюэ йн. Зыд ипзум дытракжйт ныглэгэнтур нэ,
-партым ыкжплььикари дёжжэнтиюнт ад пэр. Мэль ты кытэрож молыжтйаы, нам но ыррор
-жкрипта аппарэат.
+\textbf{Кнопка} --– элемент интерфейса компьютерных программ, является метафорой кнопки в технике и, соответственно, изображается схожей с ней и выполняет аналогичные функции. При нажатии на неё происходит программно связанное с этим нажатием действие либо событие.
 
-\[ \frac{m_{t\vphantom{y}}^2}{L_t^2} = \frac{m_{x\vphantom{y}}^2}{L_x^2} +
-    \frac{m_y^2}{L_y^2} + \frac{m_{z\vphantom{y}}^2}{L_z^2} \]
+\textbf{Метод взаимодействия <<Потяни-и-отпусти>>} (англ. --– drag-and-drop) --- способ оперирования элементами интерфейса в интерфейсах пользователя (как графическим, так и текстовым, где элементы GUI реализованы при помощи псевдографики) при помощи манипулятора «мышь» или сенсорного экрана.
 
-Вэре льаборэж тебиквюэ хаж ут. Ан пауло торквюатоз хаж, нэ пробо фэугяат
-такематыш шэа. Мэльёуз пэртинакёа юлламкорпэр прё ад, но мыа рыквюы конкыптам.
-Хёз квюот пэртинакёа эи, ельлюд трактатоз пэр ад. Зыд ед анёмал льаборэж
-номинави, жят ад конгуы льабятюр. Льаборэ тамквюам векж йн, пэр нэ дёко диам
-шапэрэт, экз вяш тебиквюэ элььэефэнд мэдиокретатым.
+\FloatBarrier
 
-Нэ про натюм фюйзчыт квюальизквюэ, аэквюы жкаывола мэль ку. Ад граэкйж
-плььатонэм адвыржаряюм квуй, вим емпыдит коммюны ат, ат шэа одео квюаырэндум.
-Вёртюты ажжынтиор эффикеэнди эож нэ, доминг лаборамюз эи ыам. Чэнзэрет
-мныжаркхюм экз эож, ыльит тамквюам факильизиж нык эи. Квуй ан элыктрам
-тинкидюнт ентырпрытаряш. Йн янвыняры трактатоз зэнтынтиаэ зыд. Дюиж зальютатуж
-ыам но, про ыт анёмал мныжаркхюм, эи ыюм пондэрюм майыжтатйж.
+\subsection{Полная функционально-модульная схема приложения}\label{sec:ch2/sec4/subsec4}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.5] {full_scheme}
+	\caption{Полная схема вкладок приложения}
+	\label{fig:full_scheme}
+\end{figure}
 
 \FloatBarrier
