--- a/Dissertation/userstyles.tex
+++ b/Dissertation/userstyles.tex
@@ -183,16 +183,16 @@
 
 \lstset{ %
 %    language=R,                     %  Язык указать здесь, если во всех листингах преимущественно один язык, в результате часть настроек может пойти только для этого языка
-    numbers=left,                   % where to put the line-numbers
-    numberstyle=\fontsize{12pt}{14pt}\selectfont\color{Gray},  % the style that is used for the line-numbers
-    firstnumber=1,                  % в этой и следующей строках задаётся поведение нумерации 5, 10, 15...
-    stepnumber=5,                   % the step between two line-numbers. If it's 1, each line will be numbered
-    numbersep=5pt,                  % how far the line-numbers are from the code
+    %numbers=left,                   % where to put the line-numbers
+    %numberstyle=\fontsize{12pt}{14pt}\selectfont\color{Gray},  % the style that is used for the line-numbers
+    %firstnumber=1,                  % в этой и следующей строках задаётся поведение нумерации 5, 10, 15...
+    %stepnumber=5,                   % the step between two line-numbers. If it's 1, each line will be numbered
+    %numbersep=5pt,                  % how far the line-numbers are from the code
     backgroundcolor=\color{white},  % choose the background color. You must add \usepackage{color}
     showspaces=false,               % show spaces adding particular underscores
     showstringspaces=false,         % underline spaces within strings
     showtabs=false,                 % show tabs within strings adding particular underscores
-    frame=leftline,                 % adds a frame of different types around the code
+    %frame=leftline,                 % adds a frame of different types around the code
     rulecolor=\color{black},        % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. commens (green here))
     tabsize=2,                      % sets default tabsize to 2 spaces
     captionpos=t,                   % sets the caption-position to top
