--- a/common/data.tex
+++ b/common/data.tex
@@ -15,14 +15,11 @@
 %\newcommand{\thesisUdk}                % Диссертация, УДК
 %{\fixme{xxx.xxx}}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\fixme{Длинное название диссертационной работы, состоящее из~достаточно большого
-количества слов, совсем длинное длинное длинное длинное название, из~которого
-простому обывателю знакомы, в~лучшем случае, лишь отдельные слова}}
+{\fixme{Отчёт по преддипломной практике, Завьялов}}
 \newcommand{\thesisSpecialtyNumber}    % Диссертация, специальность, номер
-{\fixme{XX.XX.XX}}
+{\fixme{09.03.04}}
 \newcommand{\thesisSpecialtyTitle}     % Диссертация, специальность, название (название взято с сайта ВАК для примера)
-{\fixme{Технология обработки, хранения и~переработки злаковых, бобовых культур,
-крупяных продуктов, плодоовощной продукции и~виноградарства}}
+{\fixme{Проектирование визуального языка с возможностями оптимизации рекурсии}}
 %% \newcommand{\thesisSpecialtyTwoNumber} % Диссертация, вторая специальность, номер
 %% {\fixme{XX.XX.XX}}
 %% \newcommand{\thesisSpecialtyTwoTitle}  % Диссертация, вторая специальность, название
