--- a/Dissertation/introduction.tex
+++ b/Dissertation/introduction.tex
@@ -1,4 +1,4 @@
-\chapter*{Введение}                         % Заголовок
+\chapter*{\centerline{Введение}}                         % Заголовок
 \addcontentsline{toc}{chapter}{Введение}    % Добавляем его в оглавление
 
 \newcommand{\actuality}{}
