--- a/Dissertation/setup.tex
+++ b/Dissertation/setup.tex
@@ -20,7 +20,7 @@
 %% Интервал между заголовками и между заголовком и текстом %%
 % Заголовки отделяют от текста сверху и снизу
 % тремя интервалами (ГОСТ Р 7.0.11-2011, 5.3.5)
-\setcounter{intvl}{3}               % Коэффициент кратности к размеру шрифта
+\setcounter{intvl}{1}               % Коэффициент кратности к размеру шрифта
 
 %% Отступы у заголовков в тексте %%
 \setcounter{otstup}{0}              % 0 --- без отступа; 1 --- абзацный отступ
@@ -35,7 +35,7 @@
                             %       без номера раздела);
                             % 1 --- сквозная нумерация по всей диссертации
 % Нумерация таблиц
-\setcounter{contnumtab}{1}  % 0 --- пораздельно (во введении подряд,
+\setcounter{contnumtab}{0}  % 0 --- пораздельно (во введении подряд,
                             %       без номера раздела);
                             % 1 --- сквозная нумерация по всей диссертации
 
@@ -43,12 +43,12 @@
 \setcounter{pgnum}{0}       % 0 --- номера страниц никак не обозначены;
                             % 1 --- Стр. над номерами страниц (дважды
                             %       компилировать после изменения настройки)
-\settocdepth{subsection}    % до какого уровня подразделов выносить в оглавление
-\setsecnumdepth{subsection} % до какого уровня нумеровать подразделы
+\settocdepth{subsubsection}    % до какого уровня подразделов выносить в оглавление
+\setsecnumdepth{subsubsection} % до какого уровня нумеровать подразделы
 
 
 %% Текст и форматирование заголовков %%
-\setcounter{chapstyle}{1}     % 0 --- разделы только под номером;
+\setcounter{chapstyle}{0}     % 0 --- разделы только под номером;
                               % 1 --- разделы с названием "Глава" перед номером
 \setcounter{headingdelim}{1}  % 0 --- номер отделен пропуском в 1em или \quad;
                               % 1 --- номера разделов и приложений отделены
@@ -116,8 +116,8 @@
 
 %%% Цвета гиперссылок %%%
 % Latex color definitions: http://latexcolor.com/
-\definecolor{linkcolor}{rgb}{0.9,0,0}
-\definecolor{citecolor}{rgb}{0,0.6,0}
+\definecolor{linkcolor}{rgb}{0,0,0}
+\definecolor{citecolor}{rgb}{0,0,0}
 \definecolor{urlcolor}{rgb}{0,0,1}
 %\definecolor{linkcolor}{rgb}{0,0,0} %black
 %\definecolor{citecolor}{rgb}{0,0,0} %black
