--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -1,648 +1,251 @@
-% ГОСТ Р 7.0.11-2011, Приложение Б, Книги
-@BOOK{Sychev,
-  author = {Сычёв, М. С.},
-  title = {История Астраханского казачьего войска : учебное пособие},
-  address = {Астрахань},
-  publisher = {Волга},
-  year = {2009},
-  numpages = {231},
-  language = {russian}
+@article{agentsheetsmovingbeyondsyntax,
+  author  = {Repenning, Alexander},
+  year    = {2017},
+  month   = {07},
+  pages   = {68-91},
+  title   = {Moving Beyond Syntax: Lessons from 20 Years of Blocks Programing in AgentSheets},
+  volume  = {3},
+  journal = {Journal of Visual Languages and Sentient Systems},
+  doi     = {10.18293/VLSS2017-010}
 }
 
-@BOOK{Sokolov,
-  author = {Соколов, А. Н. and Сердобинцев, К. С.},
-  editor = {Бочарова, В. М.},
-  address = {Астрахань},
-  publisher = {Калиниградский ЮИ МВД России},
-  title = {Гражданское общество: проблемы формирования и развития (философский и юридический аспекты) : монография},
-  year = {2009},
-  numpages = {218},
-  language = {russian}
+@book{book:2507994,
+  title     = {Modern Compiler Implementation in ML},
+  author    = {Andrew W. Appel},
+  publisher = {Cambridge University Press},
+  year      = {2004},
+  series    = {},
+  edition   = {},
+  volume    = {}
 }
 
-@BOOK{Gaidaenko,
-  author = {Гайдаенко, Т. А.},
-  title = {Маркетинговое управление: принципы управленческих решений и российская практика},
-  edition = {{}3-е изд, перераб. и доп.},
-  address = {М.},
-  publisher = {Эксмо: МИРБИС},
-  year = {2008},
-  numpages = {508},
-  language = {russian}
+@book{book:2155605,
+  title     = {Введение в функциональное программирование},
+  author    = {Джон Харрисон},
+  publisher = {Google},
+  isbn      = {},
+  year      = {1997},
+  series    = {},
+  edition   = {},
+  volume    = {}
 }
 
-@BOOK{Lermontov,
-  author = {Лермонтов, Михаил Юрьевич},
-  title = {Собрание сочинений: в 4 т.},
-  address = {М.},
-  publisher = {Терра-Кн. клуб},
-  year = {2009},
-  note = {4 т.},
-  language = {russian}
+@book{book:913983,
+  title     = {Engineering a compiler},
+  author    = {Keith Cooper; Linda Torczon},
+  publisher = {Morgan Kaufmann},
+  year      = {2012},
+  series    = {},
+  edition   = {},
+  volume    = {}
 }
 
-@BOOK{Management,
-  title = {Управление бизнесом : сборник статей},
-  address = {Нижний новгород},
-  publisher = {Изд-во Нижегородского университета},
-  year = {2009},
-  numpages = {243},
-  language = {russian}
+@book{book:2502019,
+  title     = {Elm in Action},
+  author    = {Richard Feldman},
+  publisher = {Manning Publications},
+  year      = {2020},
+  series    = {},
+  edition   = {},
+  volume    = {}
 }
 
-@BOOK{Borozda,
-  author = {Борозда, И. В. and Воронин, Н. И. and Бушманов, А. В.},
-  title = {Лечение сочетанных повреждений таза},
-  address = {Владивосток},
-  publisher = {Дальнаука},
-  year = {2009},
-  numpages = {195},
-  language = {russian}
+@book{book:1326024,
+  title     = {Типы в языках программирования},
+  author    = {Бенджамин Пирс},
+  publisher = {Лямбда пресс, Добросвет},
+  isbn      = {},
+  year      = {2010},
+  series    = {},
+  edition   = {},
+  volume    = {}
 }
 
-@BOOK{Marketing,
-  author = {Михненков, О. В. and Коготкова, И. З. and Генкин, Е. В. and Сороко, Г. Я.},
-  title = {Маркетинговые исследования в строительстве : учебное пособие для студентов специальности «Менеджмент организаций»},
-  address = {М.},
-  publisher = {Государственный университет управления},
-  year = {2005},
-  numpages = {59},
-  language = {russian}
+@book{book:2404124,
+  title     = {Компиляторы: принципы, технологии и инструментарий},
+  author    = {Альфред В. Ахо and Моника С. Лам and Рави Сети and Джеффри Д. Ульман},
+  publisher = {ООО “И.Д. Вильямс”},
+  isbn      = {978-5-907114-28-9},
+  year      = {2018},
+  series    = {},
+  edition   = {2},
+  volume    = {}
 }
 
-% ГОСТ Р 7.0.11-2011, Приложение Б, Нормативные правовые акты
-@BOOK{Constitution,
-  title = {Конституция Российской Федерации : офиц. текст.},
-  address = {М.},
-  publisher = {Маркетинг},
-  year = {2001},
-  numpages = {39},
-  language = {russian}
+@book{book:1032747,
+  title     = {Графы в программировании: обработка, визуализация и применение},
+  author    = {Касьянов, Виктор Николаевич;Евстигнеев, Владимир Анатольевич},
+  publisher = {БХВ-Петербург},
+  isbn      = {},
+  year      = {2003},
+  series    = {},
+  edition   = {[Науч. изд.]},
+  volume    = {}
 }
 
-@BOOK{FamilyCode,
-  title = {Семейный кодекс Российской Федерации : [федер. закон: принят Гос. Думой 8 дек. 1995~г. : по состоянию на 3~янв. 2001~г.]},
-  address = {СПб.},
-  publisher = {Стаун-кантри},
-  year = {2001},
-  numpages = {94},
-  language = {russian}
+@phdthesis{phdthesis,
+  author = {Kelso, Joel},
+  year   = {2002},
+  month  = {05},
+  pages  = {},
+  title  = {A Visual Programming Environment for Functional Languages}
 }
 
-% ГОСТ Р 7.0.11-2011, Приложение Б, Стандарты
-@BOOK{Gost.7.0.53,
-  title = {ГОСТ Р 7.0.53-2007 Система стандартов по информации, библиотечному и издательскому делу. Издания. Международный стандартный книжный номер. Использование и издательское оформление.},
-  address = {М.},
-  publisher = {Стандартинформ},
-  year = {2007},
-  numpages = {5},
-  language = {russian}
+@article{ITA_1976__10_1_47_0,
+  author    = {Berry, G.},
+  title     = {Bottom-up computation of recursive programs},
+  journal   = {RAIRO - Theoretical Informatics and Applications - Informatique Th\'eorique et Applications},
+  pages     = {47--82},
+  publisher = {Dunod-Gauthier-Villars},
+  address   = {Paris},
+  volume    = {10},
+  number    = {R1},
+  year      = {1976},
+  mrnumber  = {411222},
+  language  = {en},
+  url       = {http://www.numdam.org/item/ITA_1976__10_1_47_0/}
 }
 
-% ГОСТ Р 7.0.11-2011, Приложение Б, Депонированные научные работы
-@BOOK{Razumovski,
-  author = {Разумовский, В. А. and Андреев, Д. А.},
-  title = {Управление маркетинговыми исследованиями в регионе},
-  address = {М.},
-  year = {2002},
-  numpages = {210},
-  note = {Деп. в ИНИОН Рос. акад. наук 15.02.02, № 139876},
-  language = {russian}
+@article{9320477,
+  author  = {Kuhail, Mohammad Amin and Farooq, Shahbano and Hammad, Rawad and Bahja, Mohammed},
+  journal = {IEEE Access},
+  title   = {Characterizing Visual Programming Approaches for End-User Developers: A Systematic Review},
+  year    = {2021},
+  volume  = {9},
+  number  = {},
+  pages   = {14181-14202},
+  doi     = {10.1109/ACCESS.2021.3051043}
 }
 
-% ГОСТ Р 7.0.11-2011, Приложение Б, Диссертации
-@BOOK{Lagkueva,
-  author = {Лагкуева, Ирина Владимировна},
-  title = {Особенности регулирования труда творческих работников театров : дис. ... канд. юрид. наук : 12.00.05},
-  address = {М.},
-  year = {2009},
-  numpages = {168},
-  language = {russian}
+@article{article,
+  author  = {Johnston, Wesley and Hanna, J. and Millar, Richard},
+  year    = {2004},
+  month   = {03},
+  pages   = {1-34},
+  title   = {Advances in dataflow programming languages},
+  volume  = {36},
+  journal = {ACM Comput. Surv.},
+  doi     = {10.1145/1013208.1013209}
 }
 
-@BOOK{Pokrovski,
-  author = {Покровский, Андрей Владимирович},
-  title = {Устранимые особенности решений эллиптических уравнений : дис. ... д-ра физ.-мат. наук : 01.01.01},
-  address = {М.},
-  year = {2008},
-  numpages = {178},
-  language = {russian}
+@article{article,
+  author  = {Shilov, Nikolay},
+  year    = {2018},
+  month   = {10},
+  pages   = {549-560},
+  title   = {Etude on Recursion Elimination},
+  volume  = {25},
+  journal = {Modeling and Analysis of Information Systems},
+  doi     = {10.18255/1818-1015-2018-5-549-560}
 }
 
-% ГОСТ Р 7.0.11-2011, Приложение Б, Авторефераты диссертаций
-@BOOK{Sirotko,
-  author = {Сиротко, Владимир Викторович},
-  title = {Медико-социальные аспекты городского травматизма в современных условиях : автореф. дис. ... канд. мед. наук : 14.00.33},
-  address = {М.},
-  year = {2006},
-  numpages = {26},
-  language = {russian}
+@inproceedings{10.1007/11783183_17,
+  author    = {Morris, S. J.
+and Gotel, O. C. Z.},
+  editor    = {Barker-Plummer, Dave
+and Cox, Richard
+and Swoboda, Nik},
+  title     = {Flow Diagrams: Rise and Fall of the First Software Engineering Notation},
+  booktitle = {Diagrammatic Representation and Inference},
+  year      = {2006},
+  publisher = {Springer Berlin Heidelberg},
+  address   = {Berlin, Heidelberg},
+  pages     = {130--144},
+  abstract  = {Drawings of water are the earliest, least abstract forms of flow diagram. Representations of ideal or generalised sequences for manufacturing or actual paths for materials between machines came next. Subsequently documentation of production and information flow become subjects for graphical representation. A similar level of abstraction was necessary for representations of invisible flows such as electricity. After initial use to define control, flow diagrams became a general purpose tool for planning automated computation at all levels of composition. Proliferation of syntax variants and the need for a common language for documentation were the motivations behind standardisation efforts. Public communication of metalevel systems information superseded private comprehension of detailed algorithmic processes as a primary function. Changes to programming language structures and their associated processes caused the initial demise of flow diagrams in software engineering.},
+  isbn      = {978-3-540-35624-0}
 }
 
-% !!! этот пример НЕ работает с bibtex
-% Тот же пример, с использованием https://www.ctan.org/pkg/biblatex-gost
-@THESIS{Sirotko2,
-  author =       {Сиротко, Владимир Викторович},
-  title =        {Медико-социальные аспекты городского травматизма в современных условиях},
-  media =        {text},
-  type =         {phdautoref},
-  science =      {мед. наук},
-  specialitycode ={14.00.33},
-  address =      {М.},
-  year =         {2006},
-  pagetotal =    {26},
-  language =     {russian},
+@article{DBLP:journals/corr/abs-1906-05170,
+  author        = {Graham Campbell},
+  title         = {Efficient Graph Rewriting},
+  journal       = {CoRR},
+  volume        = {abs/1906.05170},
+  year          = {2019},
+  url           = {http://arxiv.org/abs/1906.05170},
+  archiveprefix = {arXiv},
+  eprint        = {1906.05170},
+  timestamp     = {Sat, 23 Jan 2021 01:12:38 +0100},
+  biburl        = {https://dblp.org/rec/journals/corr/abs-1906-05170.bib},
+  bibsource     = {dblp computer science bibliography, https://dblp.org}
 }
 
-@BOOK{Lukina,
-  author = {Лукина, Валентина Александровна},
-  title = {Творческая история «Записок охотника» И. С. Тургенева : автореф. дис. ... канд. филол. наук : 10.01.01},
-  address = {СПб.},
-  year = {2006},
-  numpages = {26},
-  language = {russian}
+@book{Dybvig:tspl4,
+  author    = {R. Kent Dybvig},
+  title     = {The {Scheme} Programming Language},
+  publisher = {{MIT} Press},
+  edition   = {Fourth},
+  year      = 2009,
+  texturl   = {http://www.scheme.com/tspl4/},
+  biburl    = {http://www.cs.indiana.edu/~dyb/pubs/tspl4.bib},
+  annote    = {Introduction and reference manual for R6RS Scheme with
+numerous short and extended examples and exercises.}
 }
 
-% !!! этот пример НЕ работает с bibtex
-% Тот же пример, с использованием https://www.ctan.org/pkg/biblatex-gost
-@THESIS{Lukina2,
-  author =       {Лукина, Валентина Александровна},
-  title =        {Творческая история «Записок охотника» И. С. Тургенева},
-  media =        {text},
-  type =         {phdautoref},
-  science =      {филол. наук},
-  specialitycode ={10.01.01},
-  address =      {СПб.},
-  year =         {2006},
-  pagetotal =    {26},
-  language =     {russian},
+@article{article,
+  author = {Cowles, John and Gamboa, Ruben},
+  year   = {2004},
+  month  = {01},
+  pages  = {},
+  title  = {Contributions to the theory of tail recursive functions}
 }
 
-% ГОСТ Р 7.0.11-2011, Приложение Б, Отчёты о научно-исследовательской работе
-@BOOK{Methodology,
-  author = {Загорюев, А. Л.},
-  title = {Методология и методы изучения военно-профессиональной направленности подростков : отчёт о НИР},
-  address = {Екатеринбург},
-  institution = {Уральский институт практической психологии},
-  year = {2008},
-  numpages = {102},
-  language = {russian}
+@article{article,
+  author  = {Norvig, Peter},
+  year    = {1991},
+  month   = {01},
+  pages   = {},
+  title   = {Techniques for automatic memoization with applications to context-free parsing},
+  volume  = {17},
+  journal = {Computational Linguistics - COLI}
 }
 
-% ГОСТ Р 7.0.11-2011, Приложение Б, Электронные ресурсы
-@BOOK{Encyclopedia,
-  title = {Художественная энциклопедия зарубежного классического искусства [Электронный ресурс]},
-  address = {М.},
-  publisher = {Большая Рос. энкцикл.},
-  year = {1996},
-  note = {1 электрон. опт. диск (CD-ROM)},
-  language = {russian}
-}
-
-% !!! этот пример НЕ работает с bibtex
-% Тот же пример, с использованием https://www.ctan.org/pkg/biblatex-gost
-@BOOK{Encyclopedia2,
-  title = {Художественная энциклопедия зарубежного классического искусства},
-  address = {М.},
-  media = {eresource},
-  publisher = {Большая Рос. энкцикл.},
-  year = {1996},
-  note = {1 электрон. опт. диск (CD-ROM)},
-  language = {russian},
-}
-
-@ARTICLE{Nasirova,
-  author =       {Насырова, Г. А.},
-  title =        {Модели государственного регулирования страховой деятельности
-                  [Электронный ресурс]},
-  journal =      {Вестник Финансовой академии},
-  year =         {2003},
-  number =       {4},
-  note =         {Режим доступа: http://vestnik.fa.ru/4(28)2003/4.html},
-  language =     {russian}
-}
-
-@ARTICLE{Nasirova2,
-  author = {Насырова, Г. А.},
-  title = {Модели государственного регулирования страховой деятельности},
-  journal = {Вестник Финансовой академии},
-  year = {2003},
-  media = {eresource},
-  number = {4},
-  note = {Режим доступа: http://vestnik.fa.ru/4(28)2003/4.html},
-  language = {russian}
-}
-
-% ГОСТ Р 7.0.11-2011, Приложение Б, Статьи
-
-@ARTICLE{Berestova,
-  author = {Берестова, Т. Ф.},
-  title = {Поисковые инструменты библиотеки},
-  journal = {Библиография},
-  year = {2006},
-  number = {4},
-  pages = {19},
-  language = {russian}
-}
-
-@ARTICLE{Kriger,
-  author = {Кригер, И.},
-  title =  {Бумага терпит},
-  journal = {Новая газета},
-  year = {2009},
-  note = {1 июля},
-  language = {russian}
-}
-
-
-% Examples from https://verbosus.com/bibtex-style-examples.html
-@ARTICLE{Article,
-  author   = {Peter Adams},
-  title    = {The title of the work},
-  journal  = {The name of the journal},
-  year     = {1993},
-  number   = {2},
-  pages    = {201-213},
-  month    = {7},
-  note     = {An optional note},
-  volume   = {4},
-  language = {english}
-}
-
-@BOOK{Book,
-  author    = {Peter Babington},
-  title     = {The title of the work},
-  publisher = {The name of the publisher},
+@book{book:1553,
+  title     = {Функциональное программирование},
+  author    = {Филд А., Харрисон П.},
+  publisher = {Мир},
   year      = {1993},
-  volume    = {4},
-  series    = {10},
-  address   = {The address},
-  edition   = {3},
-  month     = {7},
-  note      = {An optional note},
-  isbn      = {3257227892},
-  language  = {english}
+  series    = {},
+  edition   = {},
+  volume    = {}
 }
 
-@BOOKLET{Booklet,
-  title        = {The title of the work},
-  author       = {Peter Caxton},
-  howpublished = {How it was published},
-  address      = {The address of the publisher},
-  month        = {7},
-  year         = {1993},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@CONFERENCE{Conference,
-  author       = {Peter Draper},
-  title        = {The title of the work},
-  booktitle    = {The title of the book},
-  year         = {1993},
-  editor       = {The editor},
-  volume       = {4},
-  series       = {5},
-  pages        = {213},
-  address      = {The address of the publisher},
-  month        = {7},
-  organization = {The organization},
-  publisher    = {The publisher},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@INBOOK{Inbook,
-  author       = {Peter Eston},
-  title        = {The title of the work},
-  booktitle    = {Book title},
-  chapter      = {8},
-  pages        = {201-213},
-  publisher    = {The name of the publisher},
-  year         = {1993},
-  volume       = {4},
-  series       = {5},
-  address      = {The address of the publisher},
-  edition      = {3},
-  month        = {7},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@INCOLLECTION{Incollection,
-  author       = {Peter Farindon},
-  title        = {The title of the work},
-  booktitle    = {The title of the book},
-  publisher    = {The name of the publisher},
-  year         = {1993},
-  editor       = {The editor},
-  volume       = {4},
-  series       = {5},
-  chapter      = {8},
-  pages        = {201-213},
-  address      = {The address of the publisher},
-  edition      = {3},
-  month        = {7},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@MANUAL{Manual,
-  title        = {The title of the work},
-  author       = {Peter Gainsford},
-  organization = {The organization},
-  address      = {The address of the publisher},
-  edition      = {3},
-  month        = {7},
-  year         = {1993},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@MASTERSTHESIS{Mastersthesis,
-  author       = {Peter Harwood},
-  title        = {The title of the work},
-  school       = {The school where the thesis was written},
-  year         = {1993},
-  address      = {The address of the publisher},
-  month        = {7},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@MISC{Misc,
-  author       = {Peter Isley},
-  title        = {The title of the work},
-  howpublished = {How it was published},
-  month        = {7},
-  year         = {1993},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@PHDTHESIS{Phdthesis,
-  author       = {Peter Joslin},
-  title        = {The title of the work},
-  school       = {The school where the thesis was written},
-  year         = {1993},
-  address      = {The address of the publisher},
-  month        = {7},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@PROCEEDINGS{Proceedings,
-  title        = {The title of the work},
-  year         = {1993},
-  editor       = {Peter Kidwelly},
-  volume       = {4},
-  series       = {5},
-  address      = {The address of the publisher},
-  month        = {7},
-  organization = {The organization},
-  publisher    = {The name of the publisher},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@TECHREPORT{Techreport,
-  author       = {Peter Lambert},
-  title        = {The title of the work},
-  institution  = {The institution that published},
-  year         = {1993},
-  number       = {2},
-  address      = {The address of the publisher},
-  month        = {7},
-  note         = {An optional note},
-  language     = {english}
-}
-
-@UNPUBLISHED{Unpublished,
-  author       = {Peter Marcheford},
-  title        = {The title of the work},
-  note         = {An optional note},
-  month        = {7},
-  year         = {1993},
-  language     = {english}
-}
-
-%%% Реальные примеры
-
-% Инициалы должны быть записаны после запятой, с точками, через пробел
-% http://www.kit-e.ru/articles/elcomp/2006_12_124.php
-% Подчёркивания в ссылке приходится экранировать
-% http://www.kit-e.ru/articles/elcomp/2006\_12\_124.php
-@online{medvedev2006jelektronnye,
-  title={Электронные компоненты и монтажные подложки},
-  author={Медведев, А. М.},
-  journal={Компоненты и технологии},
-  number={12},
-  pages={124--134},
-  year={2006},
+@online{maturityofvpl,
+  title={The maturity of visual programming},
+  author={Rémi D.},
+  journal={craft ai},
+  year={2015},
   medium={Электронный ресурс},
-  url = {http://www.kit-e.ru/articles/elcomp/2006\_12\_124.php},
-  urldate = {19.01.2015},
-  language = {russian}
-}
-
-% Real example
-% & в названии журнала надо экранировать
-% 10.1002/1521-4125(200007)23:7<581::AID-CEAT581>3.0.CO;2-P
-% < > в ссылке приходится экранировать %3C и %3E, а потом ещё знаки процента в них экранировать
-% 10.1002/1521-4125(200007)23:7%3C581::AID-CEAT581%3E3.0.CO;2-P
-% 10.1002/1521-4125(200007)23:7\%3C581::AID-CEAT581\%3E3.0.CO;2-P
-% url не нужен. если запись о бумажной публикации
-@article {CEAT:CEAT581,
-  author = {Deiters, U. K.},
-  title = {A Modular Program System for the Calculation of Thermodynamic Properties of Fluids},
-  journal = {Chemical Engineering \& Technology},
-  volume = {23},
-  number = {7},
-  publisher = {WILEY-VCH Verlag},
-  issn = {1521-4125},
-  doi = {10.1002/1521-4125(200007)23:7<581::AID-CEAT581>3.0.CO;2-P},
-  pages = {581--584},
-  year = {2000},
+  url = {https://www.craft.ai/blog/the-maturity-of-visual-programming},
+  urldate = {30.05.2021},
   language = {english}
 }
 
-% Real with  4 authors
-@article{doi:10.1080/01932691.2010.513279,
-  author = {Young-Sang Cho and Young Kuk Kim and Kook Chae Chung and Chul Jin Choi },
-  title = {Deformation of Colloidal Crystals for Photonic Band Gap Tuning},
-  journal = {Journal of Dispersion Science and Technology},
-  volume = {32},
-  number = {10},
-  pages = {1408-1415},
-  year = {2011},
-  doi = {10.1080/01932691.2010.513279},
+@online{blocklysite,
+  title={Blockly},
+  journal={Google Developers},
+  year={2021},
+  medium={Электронный ресурс},
+  url = {https://developers.google.com/blockly},
+  urldate = {30.05.2021},
   language = {english}
 }
 
-% doi with (), author with umlaut or other unicode or specific symbols, 9 authors
-% latex don't like Gösele1999161 in ref
-% Умляуты в авторах понимаются из-за поддержки в юникодной странице pdflatex и xelatex
-% Иллюстрация того, что будет. если на английской записи будут поставлена пометка, что язык русский
-@article{Gosele1999161,
-  title = "Wafer bonding for microsystems technologies",
-  journal = "Sensors and Actuators A: Physical",
-  volume = "74",
-  number = "1–3",
-  pages = "161 - 168",
-  year = "1999",
-  issn = "0924-4247",
-  doi = "10.1016/S0924-4247(98)00310-0",
-  author = "Gösele, U. and Tong, Q.-Y. and Schumacher, A. and Kräuter, G. and Reiche, M. and Plößl, A. and Kopperschmidt, P. and Lee, T.-H. and Kim, W.-J.",
-  keywords = "Wafer bonding",
-  keywords = "Fusion bonding",
-  keywords = "Pressure sensors",
-  keywords = "Interface reactions",
-  keywords = "Hydrophilic bonding",
-  keywords = "Hydrophobic bonding",
-  language = {russian}
+@online{flowgorithm,
+  title={Flowgorithm},
+  journal={Flowgorithm - Flowchart Programming Language},
+  year={2021},
+  medium={Электронный ресурс},
+  url = {http://www.flowgorithm.org/},
+  urldate = {30.05.2021},
+  language = {english}
 }
 
-% Real example (from Google or Springer)
-% unmodified styles don't know %language = {English}
-% язык писать с маленьких
-% иллюстрация incollection
-% 10.1007/0-387-32989-7_45
-% Подчёркивания в DOI приходится экранировать
-% 10.1007/0-387-32989-7\_45
-@incollection{Li2007StressAnalysis,
-  year={2007},
-  isbn={978-0-387-27974-9},
-  booktitle={Micro- and Opto-Electronic Materials and Structures: Physics, Mechanics, Design, Reliability, Packaging},
-  editor={Suhir, E. and Lee, Y. C. and Wong, C. P.},
-  doi={10.1007/0-387-32989-7_45},
-  title={Stress Analysis for Processed Silicon Wafers and Packaged Micro-devices},
-  publisher={Springer US},
-  author={Li, Li and Guo, Yifan and Zheng, Dawei},
-  pages={B677-B709},
-  language={english}
-}
-
-% Real, β sign
-% inputenc don't know β sign %aluminosilicate-β-quartz
-% Знаки типа β, которые не знает таблица кодировки, с которой работает компилятор нужно заменять на latex команды
-% doi должен быть без http://dx.doi.org/
-@article{Shoji199895,
-title = "Low-temperature anodic bonding using lithium aluminosilicate-\(\beta\)-quartz glass ceramic",
-journal = "Sensors and Actuators A: Physical",
-volume = "64",
-number = "1",
-pages = "95 - 100",
-year = "1998",
-note = "Tenth {IEEE} International Workshop on Micro Electro Mechanical Systems ",
-issn = "0924-4247",
-doi = "10.1016/S0924-4247(97)01659-2",
-author = {Shuichi Shoji and Hiroto Kikuchi and Hirotaka Torigoe},
-keywords = "Anodic bonding",
-keywords = "Low-temperature bonding",
-keywords = "Micro assembly",
-keywords = "Micro package",
-keywords = "Glass ceramic",
-}
-
-
-% from urlbst package
-% Example from Jason Eisner, by mail (nothing special about the entry,
-% but he seemed to be having formatting problems with unsrturl and proceedings
-% entries.
-% http://cs.jhu.edu/~jason/papers/#icassp07
-@InProceedings{test:eisner-sample,
-  author =       {Damianos Karakos and Sanjeev Khudanpur and Jason
-                  Eisner and Carey~E. Priebe},
-  title =        {Iterative denoising using {J}ensen-{R}enyi
-                  divergences with an application to unsupervised
-                  document categorization},
-  booktitle =    {Proceedings of ICASSP},
-  year =         2007,
-  url =          {http://cs.jhu.edu/~jason/papers/\#icassp07}
-}
-
-@InProceedings{test:eisner-sample-shorted,
-  author =       {Damianos Karakos and Sanjeev Khudanpur and Jason
-                  Eisner and Carey~E. Priebe},
-  title =        {Iterative denoising using {J}ensen-{R}enyi
-                  divergences with an application to unsupervised
-                  document categorization},
-  booktitle =    {Proceedings of ICASSP},
-  shortbooktitle = {Proc. of ICASSP},
-  year =         2007,
-  url =          {http://cs.jhu.edu/~jason/papers/\#icassp07}
-}
-
-% Попытка записать патент имеющимися средствами
-@Book{iofis_patent1960,
-  title                    = {Способ пайки керамики с~керамикой и~стекла с~металлом : а.\,с.~126728 СССР},
-  author                   = {Иофис, Н. А.},
-  year                     = {1960},
-  numpages                 = {Бюл. № 5.~1},
-  language                 = {russian}
-}
-
-% Попытка записать патент имеющимися средствами
-@Book{AB_patent_Pomerantz_1968,
-  title                    = {Anodic bonding : patent no. 3397278 US},
-  author                   = {Pomerantz, D. I.},
-  year                     = {1968},
-  language                 = {english}
-}
-
-% !!! этот пример НЕ работает с bibtex
-% Примеры оформления патентов из пакета https://www.ctan.org/pkg/biblatex-gost
-@Patent{patent2h,
-  heading =      {Заявка 1095735 Рос. федерация, МПК\ensuremath{^7} B 64 G 1/00},
-  author =       {Тернер, Э. В.},
-  authortype =   {США},
-  title =        {Одноразовая ракета-носитель},
-  media =        {text},
-  holder =       {{заявитель Спейс Системз/Лорал, инк.}},
-  credits =      {патент. поверенный Егорова Г. Б.},
-  reqnumber =    {2000108705/28},
-  date =         {2000-04-07},
-  publdate =     {2001-03-10},
-  publication =  {Бюл. № 7 (I ч.)\midsentence},
-  prdate =       {1999-04-09},
-  prnumber =     {09/289, 037},
-  prcountry =    {countryus},
-  pagetotal =    {5 с.~: ил.},
-  language =     {russian},
-}
-
-@Patent{patent3h,
-  heading =      {А. с. 1007970 СССР, МКИ\ensuremath{^3} В 25.1 15/00},
-  author =       {В. С. Ваулин and В. Г. Кемайкин},
-  authortype =   {СССР},
-  title =        {Устройство для захвата неориентированных деталей типа валов},
-  media =        {text},
-  reqnumber =    {3360585/25-08},
-  date =         {1981-11-23},
-  publication =  {Бюл. № 12},
-  publdate =     {1983-03-30},
-  pagetotal =    {2 с.~: ил.},
-  language =     {russian},
-}
-
-@Patent{patent2,
-  author =       {Тернер, Э. В.},
-  authortype =   {США},
-  title =        {Одноразовая ракета-носитель},
-  media =        {text},
-  type =         {patreq},
-  number =       1095735,
-  location =     {countryru},
-  ipc =          {МПК\ensuremath{^7} B 64 G 1/00},
-  holder =       {{заявитель Спейс Системз/Лорал, инк.}},
-  credits =      {патент. поверенный Егорова Г. Б.},
-  reqnumber =    {2000108705/28},
-  date =         {2000-04-07},
-  publdate =     {2001-03-10},
-  publication =  {Бюл. № 7 (I ч.)\midsentence},
-  prioritydate = {1999-04-09},
-  prioritynumber ={09/289, 037},
-  prioritycountry ={countryus},
-  pagetotal =    {5 с.~: ил.},
-  language =     {russian},
+@online{blueprint,
+  title={Blueprint Visual Scripting},
+  journal={Unreal Engine Documentation},
+  year={2021},
+  medium={Электронный ресурс},
+  url = {https://docs.unrealengine.com/4.26/en-US/ProgrammingAndScripting/Blueprints/},
+  urldate = {30.05.2021},
+  language = {english}
 }
