--- a/common/renames.tex
+++ b/common/renames.tex
@@ -1,5 +1,5 @@
 %%% Переопределение именований %%%
-\renewcommand{\contentsname}{Оглавление}% (ГОСТ Р 7.0.11-2011, 4)
+\renewcommand{\contentsname}{Содержание}% (ГОСТ Р 7.0.11-2011, 4)
 \renewcommand{\figurename}{Рисунок}% (ГОСТ Р 7.0.11-2011, 5.3.9)
 \renewcommand{\tablename}{Таблица}% (ГОСТ Р 7.0.11-2011, 5.3.10)
 \renewcommand{\listfigurename}{Список рисунков}%
